--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </head>
 <body>
 
-<header>🌤 Weather & Seasons — Vocabulary + 30 Conversations Quiz</header>
+<header>🌤 Weather & Seasons — Tutor P'Franck + 30 Conversations Quiz</header>
 
 <nav class="top-menu">
   <button class="menu-btn active" onclick="showTab('lesson', this)">📘 LESSON</button>
